trunk/phash-win32/src/pHash.h

typedef unsigned __int64 ulong64;
typedef unsigned long long ulong64;
typedef enum ph_mvp_retcode {
    PH_SUCCESS = 0,   /* success */
    PH_ERRPGSIZE,     /* page size error */
    PH_ERRFILE ,       /* file operations */
    PH_ERRMMAP ,        /* mmap'ing error */
    PH_ERRMSYNC ,       /* msync error */
    PH_ERRTRUNC ,       /* error truncating file */
    PH_ERRSAVEMVP,      /* could not save mvp file */
    PH_ERRARG,   /* null arg */
    PH_ERRMEM,       /* mem alloc error - not enough available memory */
    PH_ERRNTYPE,      /* unrecognized node type */
    PH_ERRCAP,     /* more results found than can be supported in ret array */
    PH_ERRFILETYPE,  /*unrecognized file type  */
}MVPRetCode;
typedef enum ph_hashtype {
    BYTEARRAY   = 1,          /* refers to bitwidth of the hash value */
    UINT16ARRAY = 2,
    UINT32ARRAY = 4,
    UINT64ARRAY = 8,
}HashType;
typedef struct ph_file_offset {
    off_t offset;
    uint8_t fileno;
} FileIndex;
/* structure for a single hash */
typedef struct ph_datapoint {
    char *id;
    void *hash;
    float *path;
    uint16_t hash_length;
    uint8_t hash_type;
}DP;
/* call back function for mvp tree functions - to performa distance calc.'s*/
typedef float (*hash_compareCB)(DP *pointA, DP *pointB);
typedef struct ph_mvp_file {
    const char *filename;   /* name of db to use */
    char *buf;
    off_t file_pos;
    int fd;
    HANDLE fh;
    uint8_t nbdbfiles;
    uint8_t branchfactor; /*branch factor of tree, M(=2)*/

    /*length of path to store distances from vantage points in the struct data_point. 
      used when querying or constructing the tree, P(=5) */
    uint8_t pathlength;  

    uint8_t leafcapacity; /*maximum number of data points to a leaf, K(=25) */

    /*size of page size to store a leaf of the tree structure.
      Must be >= system page size.  Might need to increase above 
      the system page size to fit all the data points in a leaf.
    */
    off_t pgsize;
    HashType hash_type;

    /*callback function to use to calculate the distance between 2 datapoints */
    hash_compareCB hashdist;

} MVPFile ;
/* convenience function to set var's of mvp tree */
__declspec(dllexport)
void ph_mvp_init(MVPFile *m);
/* /brief alloc a single data point
 *  allocates path array, does nto set id or path
 */
__declspec(dllexport)
DP* ph_malloc_datapoint(int hashtype, int pathlength);
/*! /brief compute dct robust image hash
 *  /param file string variable for name of file
 *  /param hash of type ulong64 (must be 64-bit variable)
 *  /return int value - -1 for failure, 1 for success
 */
__declspec(dllexport)
int ph_dct_imagehash(const char* file,ulong64 &hash);
/* ! /brief dct video robust hash
 *   Compute video hash based on the dct of normalized video 32x32x64 cube
 *   /param file name of file
 *   /param hash ulong64 value for hash value
 *   /return int value - less than 0 for error
 */
__declspec(dllexport)
int ph_hamming_distance(const ulong64 hash1,const ulong64 hash2);
/** /brief create MH image hash for filename image
*   /param filename - string name of image file
*   /param N - (out) int value for length of image hash returned
*   /param alpha - int scale factor for marr wavelet (default=2)
*   /param lvl   - int level of scale factor (default = 1)
*   /return uint8_t array
**/
__declspec(dllexport) 
uint8_t* ph_mh_imagehash(const char *filename, int &N, int alpha=2, int lvl = 1);
/** /brief aux function to query
 *  /param m - MVPFile state information
 *  /param query - DP of datapoint to query
 *  /param knearest - int capacity of results array.
 *  /param radius - float value of radius of values to consider
 *  /param results - DP array of points of result
 *  /param count - int* number of results found (out)
 *  /param level - int value to track recursion depth.
 *  /return MVPRetCode
**/
__declspec(dllexport)
MVPRetCode ph_query_mvptree(MVPFile *m, DP *query, int knearest, float radius,
			    DP **results, int *count, int level);
/**  /brief query mvptree function
 *   /param m - MVPFile file state info
 *   /param query - DP* item to query for
 *   /param knearest - int capacity of results array
 *   /param radius  - float radius to consider in query
 *   /param results - DP** list of pointers to results found
 *   /param count -  int number of results found (out)
 **/
__declspec(dllexport)
MVPRetCode ph_query_mvptree(MVPFile *m, DP *query, int knearest, float radius,
			    DP **results, int *count);
/** /brief save dp points to a file (aux func)
 *  /param m - MVPFile state information of file
 *  /param points - DP** list of points to add
 *  /param nbpoints - int length of points array
 *  /param saveall_flag - int  1 indicates used by save, 0 indicates used by add function
 *  /param level - int track recursion level
 *  /return FileIndex* - fileno and offset into file.
**/
__declspec(dllexport)
FileIndex* ph_save_mvptree(MVPFile *m, DP **points, int nbpoints, int saveall_flag, int level);
/** /brief save points to mvp file 
 *  /param m - MVPFile state info of file
 *  /param points - DP** list of points to add
 *  /param nbpoints - int number of points
 *  /return MVPRetCode - ret code 
**/
__declspec(dllexport)
MVPRetCode ph_save_mvptree(MVPFile *m, DP **points, int nbpoints);
/**  /brief add points to mvp file (aux function)
 *   /param m - MVPFile state information of file
 *   /param new_dp - datapoint to add
 *   /param level - int track recursion level
 *   /return MVPRetCode
 **/
__declspec(dllexport)
MVPRetCode ph_add_mvptree(MVPFile *m, DP *new_dp, int level);
/** /brief add a list of points to mvp file
    /param m - MVPFile state information of file.
    /param points - DP** list of points to add
    /param nbpoints - int number of points
    /return int - number of points added, neg for error
**/
__declspec(dllexport)
int ph_add_mvptree(MVPFile *m, DP **points, int nbpoints);